add example pictures

--- a/dtimer.csproj
+++ b/dtimer.csproj
@@ -104,5 +104,9 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="example1.PNG" />
+    <Resource Include="example2.PNG" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
