--- a/dtimer.csproj
+++ b/dtimer.csproj
@@ -6,7 +6,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{9CBBD4BF-C58E-4529-B88A-D15C0C83E8BA}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>dtimer</RootNamespace>
+    <RootNamespace>DTimer</RootNamespace>
     <AssemblyName>dtimer</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
